[package]
name = "osvauld-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "osvauld_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
crypto_utils = { path = "../../crypto_utils" }
once_cell = "1.8"
log = "0.4"
tauri-plugin-log = "2.0.1"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tokio = {version="1.40.0", features= ["full"]}
uuid = { version = "1.3.0", features = ["v4"] }
actix-web = { version = "4.3", features = ["openssl"] }
actix-rt = "2.8"
openssl = "0.10"
rcgen = "0.10"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
