[package]
name = "osvauld"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "osvauld_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.1.0"
crypto_utils = { path = "../../crypto_utils" }
once_cell = "1.8"
log = "0.4"
tauri-plugin-log = "2.0.2"
tauri-plugin-clipboard-manager = "2.0.2"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
rcgen = "0.10"
diesel_migrations = "2.0.0"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
libsqlite3-sys = { version = "0.25.2", features = [
    "bundled",
    "unlock_notify",
    "min_sqlite_version_3_7_16",
] }
iroh = "0.28.1"
anyhow = "1.0.91"
futures-lite = "2.3.0"
iroh-base = "0.28.0"
iroh-net = "0.28.1"
sys-locale = "0.3.1"
chrono = "0.4.38"
async-trait = "0.1.83"
thiserror = "2.0.0"
iroh-quinn = "0.12.0"
